--- a/package.xml
+++ b/package.xml
@@ -51,9 +51,11 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roomba_500driver_meiji</depend>
   <depend>roscpp</depend>
+  <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>tf</depend>
+  <depend>tf2</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
