--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,8 @@ include
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/chibi23_a_node.cpp)
 add_executable(local_path_planner src/local_path_planner.cpp)
+#add_executable(global_path_planner src/global_path_planner.cpp) # global_path_planner を build するときはコメントアウトを外す
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -148,12 +150,14 @@ add_executable(local_path_planner src/local_path_planner.cpp)
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(local_path_planner ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(global_path_planner ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}) # global_path_planner を build するときはコメントアウトを外す
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
 target_link_libraries(local_path_planner ${catkin_LIBRARIES})
+# target_link_libraries(global_path_planner ${catkin_LIBRARIES}) # global_path_planner を build するときはコメントアウトを外す
 
 #############
 ## Install ##
