ros param の受け取り処理を修正

--- a/config/param/global_path_planner.yaml
+++ b/config/param/global_path_planner.yaml
@@ -1,13 +1,13 @@
-start_position: { 2160, 2005 }
+xml_start: [ 2160, 2005 ]
 
-gloal_positions: {
-                    { 2160, 2005 },
-                    { 2320, 2010 },
-                    { 2320, 2290 },
-                    { 2115, 2287 },
-                    { 2000, 2285 },
-                    { 1660, 2280 },
-                    { 1660, 1990 },
-                    { 1830, 1995 },
-                    { 2000, 2000 },
-                 }
+xml_goals: [
+                [ 2160, 2005 ],
+                [ 2320, 2010 ],
+                [ 2320, 2290 ],
+                [ 2115, 2287 ],
+                [ 2000, 2285 ],
+                [ 1660, 2280 ],
+                [ 1660, 1990 ],
+                [ 1830, 1995 ],
+                [ 2000, 2000 ],
+            ]
