ゴールパラメータをx と y に分割する

--- a/config/param/global_path_planner.yaml
+++ b/config/param/global_path_planner.yaml
@@ -1,13 +1,5 @@
-xml_start: [ 2160, 2005 ]
+start_param: [ 2160, 2005 ]
 
-xml_goals: [
-                [ 2160, 2005 ],
-                [ 2320, 2010 ],
-                [ 2320, 2290 ],
-                [ 2115, 2287 ],
-                [ 2000, 2285 ],
-                [ 1660, 2280 ],
-                [ 1660, 1990 ],
-                [ 1830, 1995 ],
-                [ 2000, 2000 ],
-            ]
+goal_x_parms: [ 2160, 2320, 2320, 2115, 2000, 1660, 1660, 1830, 2000 ]
+
+goal_y_parms: [ 2005, 2010, 2290, 2287, 2285, 2280, 1990, 1995, 2000 ]            
