--- a/config/param/global_path_planner.yaml
+++ b/config/param/global_path_planner.yaml
@@ -1,5 +1,5 @@
 start_param: [ 2160, 2005 ]
 
-goal_x_parms: [ 2160, 2320, 2320, 2115, 2000, 1660, 1660, 1830, 2000 ]
+goal_x_params: [ 2160, 2320, 2320, 2115, 2000, 1660, 1660, 1830, 2000 ]
 
-goal_y_parms: [ 2005, 2010, 2290, 2287, 2285, 2280, 1990, 1995, 2000 ]            
+goal_y_params: [ 2005, 2010, 2290, 2287, 2285, 2280, 1990, 1995, 2000 ]
