--- a/config/param/global_path_planner.yaml
+++ b/config/param/global_path_planner.yaml
@@ -1,5 +1,23 @@
-start_param: [ 2160, 2005 ]
+start_param: [ -1.713, 0.143]
 
-goal_x_params: [ 2160, 2320, 2320, 2115, 2000, 1660, 1660, 1830, 2000 ]
+goal_x_params: [
+                    12.975,
+                    13.232,
+                    13.635,
+                    -2.018,
+                    -18.403,
+                    -20.150,
+                    -20.585,
+                    -1.319
+               ]
 
-goal_y_params: [ 2005, 2010, 2290, 2287, 2285, 2280, 1990, 1995, 2000 ]
+goal_y_params: [
+                    -0.311,
+                    6.559,
+                    13.576,
+                    13.643,
+                    14.681,
+                    7.718,
+                    0.471,
+                    -0.006
+                ]
