--- a/config/param/local_path_planner.yaml
+++ b/config/param/local_path_planner.yaml
@@ -8,9 +8,12 @@ smoothing_check: false
 hz: 10  #ループ周波数[Hz]
 
 #速度制限(Dynamic Window関連)
-max_vel: 0.40  #最高並進速度[m/s]
+max_vel: 0.45  #最高並進速度[m/s]
 min_vel: 0.0  #最低並進速度[m/s]
 max_yawrate: 1.0 #最高旋回速度[rad/s]
+
+#その他速度
+vel_change_border_yawrate: 0.5  #vel_changerを使うかどうかの判定旋回速度[rad/s]
 
 #加速度制限(Dynamic Window関連)
 max_accel: 1000.0  #最高並進加速度[m/s^2]
@@ -22,16 +25,16 @@ yawrate_step: 0.1
 
 #時間[s]
 dt: 0.1  #微小時間
-predict_time: 3.0  #軌道予測時間[s]
+predict_time: 4.5  #軌道予測時間[s]
 
 #機体サイズ(半径)[m]
 roomba_radius: 0.17  #ルンバの半径
 radius_margin: 0.1  #衝突半径の予測
 
 #重み定数
-weight_heading: 1.5  #評価関数1項目(heading)
-weight_distance: 2.0  #評価関数2項目(distance)
-weight_velocity: 0.5  #評価関数3項目(velocity)
+weight_heading: 0.85  #評価関数1項目(heading)
+weight_distance: 1.5  #評価関数2項目(distance)
+weight_velocity: 0.6  #評価関数3項目(velocity)
 
 #許容誤差[m]
 goal_tolerance: 0.5  #waypoints_に対する許容誤差
