--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,8 +138,12 @@ include
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/chibi23_a_node.cpp)
-add_executable(local_path_planner src/local_path_planner.cpp)
-#add_executable(global_path_planner src/global_path_planner.cpp) # global_path_planner を build するときはコメントアウトを外す
+
+add_executable(global_path_planner src/global_path_planner.cpp)
+add_executable(local_goal_creator  src/local_goal_creator.cpp)
+add_executable(local_path_planner  src/local_path_planner.cpp)
+add_executable(obstacle_detector   src/obstacle_detector.cpp)
+add_executable(localizer           src/localizer.cpp)
 
 
 ## Rename C++ executable without prefix
@@ -151,15 +155,25 @@ add_executable(local_path_planner src/local_path_planner.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(local_path_planner ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-# add_dependencies(global_path_planner ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}) # global_path_planner を build するときはコメントアウトを外す
+
+add_dependencies(global_path_planner ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(local_goal_creator  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(local_path_planner  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(obstacle_detector   ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(localizer           ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-target_link_libraries(local_path_planner ${catkin_LIBRARIES})
-# target_link_libraries(global_path_planner ${catkin_LIBRARIES}) # global_path_planner を build するときはコメントアウトを外す
+
+target_link_libraries(global_path_planner ${catkin_LIBRARIES})
+target_link_libraries(local_goal_creator  ${catkin_LIBRARIES})
+target_link_libraries(local_path_planner  ${catkin_LIBRARIES})
+target_link_libraries(obstacle_detector   ${catkin_LIBRARIES})
+target_link_libraries(localizer           ${catkin_LIBRARIES})
+
 
 #############
 ## Install ##
