--- a/config/param/local_path_planner.yaml
+++ b/config/param/local_path_planner.yaml
@@ -2,22 +2,21 @@
 visualize_check: true
 
 #trueならスムージング関数を適用
-smoothing_check: true
+smoothing_check: false
 
 #制御ループ周波数
 hz: 10  #ループ周波数[Hz]
 
+#----- 障害物回避実験用 -----
+
 #速度制限(Dynamic Window関連)
-max_vel: 0.45  #最高並進速度[m/s]
+max_vel: 0.2  #最高並進速度[m/s]
 min_vel: 0.0  #最低並進速度[m/s]
 max_yawrate: 1.0 #最高旋回速度[rad/s]
 
-#その他速度
-vel_change_border_yawrate: 0.5  #vel_changerを使うかどうかの判定旋回速度[rad/s]
-
 #加速度制限(Dynamic Window関連)
-max_accel: 1000.0  #最高並進加速度[m/s^2]
-max_yawaccel: 1000.0  #最高旋回加速度[m/s^2]
+max_accel: 1.0  #最高並進加速度[m/s^2]
+max_yawaccel: 1.0  #最高旋回加速度[m/s^2]
 
 #速度解像度
 vel_step: 0.05
@@ -25,19 +24,20 @@ yawrate_step: 0.1
 
 #時間[s]
 dt: 0.1  #微小時間
-predict_time: 4.5  #軌道予測時間[s]
+predict_time: 5.0  #軌道予測時間[s]
 
 #機体サイズ(半径)[m]
-roomba_radius: 0.17  #ルンバの半径
+roomba_radius: 0.25  #ルンバの半径
 radius_margin: 0.1  #衝突半径の予測
 
 #重み定数
-weight_heading: 0.85  #評価関数1項目(heading)
+weight_heading: 0.8  #評価関数1項目(heading)
 weight_distance: 1.5  #評価関数2項目(distance)
-weight_velocity: 0.6  #評価関数3項目(velocity)
+weight_velocity: 1.0  #評価関数3項目(velocity)
+weight_yawrate: 1.0  #評価関数4項目(yawrate)
 
 #許容誤差[m]
-goal_tolerance: 0.5  #waypoints_に対する許容誤差
+goal_tolerance: 0.8  #waypoints_に対する許容誤差
 
 #評価関数2項目(distance)で探索する範囲[m]
 search_range: 0.95
@@ -45,4 +45,4 @@ search_range: 0.95
 #障害物で止まってしまった後に動き出す
 stop_counter: 0  #停止しているループ数
 stop_time: 5  #停止してから動き出すまでのループ数
-move_time: 10  #停止を選択できないループ数
+move_time: 30  #停止を選択できないループ数
